Fix XSS vulnerability, clarifiy the agreement

--- a/newVM.html
+++ b/newVM.html
@@ -30,7 +30,7 @@
 					if (!conf) break;
 					conf = confirm("Read and confirm the Networking Agreement.\n---\nQuick Reference: s2\n\nYou are NOT allowed to hack anyone with the network assigned to you.\nSome sites are blocked because PC is russian and uses a russian ISP.");
 					if (!conf) break;
-					conf = confirm("Read and confirm the Networking Agreement.\n---\nQuick Reference: s3\n\nAvoid any blocked sites. You may use a VPN. But without a VPN, don't do anything bad. You should try and use the Internet as you would use one in Russia.");
+					conf = confirm("Read and confirm the Networking Agreement.\n---\nQuick Reference: s3\n\nAvoid any blocked sites. You may use a VPN. But without a VPN you shouldn't do anything bad	. You should try and use the Internet as you would use one in Russia.");
 					if (!conf) break;
 					conf = confirm("Read and confirm the Networking Agreement.\n---\n\nNow, do you accept this agreement? If not, the networking won't be enabled.");
 					if (!conf) break;
